Remove FaInitGenerator and simplify GameUpdate Logic