@@ -51,7 +51,6 @@ import org.springframework.util.ReflectionUtils;
 
 import java.io.IOException;
 import java.nio.file.Path;
-import java.util.Collections;
 import java.util.LinkedHashMap;
 import java.util.List;
 import java.util.Map;
@@ -193,7 +192,7 @@ public class GameServiceTest extends ServiceTest {
   private void mockMatchmakerChain() {
     when(modService.getFeaturedMod(FAF.getTechnicalName()))
         .thenReturn(completedFuture(FeaturedModBeanBuilder.create().defaultValues().get()));
-    when(gameUpdater.update(any(), any(), any(), any())).thenReturn(completedFuture(null));
+    when(gameUpdater.update(any(), any(), any())).thenReturn(completedFuture(null));
     when(fafServerAccessor.startSearchMatchmaker()).thenReturn(new CompletableFuture<>());
   }
 
@@ -217,7 +216,7 @@ public class GameServiceTest extends ServiceTest {
     mockStartGameProcess(gameLaunchMessage, false);
     when(mapService.isInstalled(game.getMapFolderName())).thenReturn(true);
     when(fafServerAccessor.requestJoinGame(game.getId(), null)).thenReturn(completedFuture(gameLaunchMessage));
-    when(gameUpdater.update(any(), any(), any(), any())).thenReturn(completedFuture(null));
+    when(gameUpdater.update(any(), any(), any())).thenReturn(completedFuture(null));
     when(modService.getFeaturedMod(game.getFeaturedMod())).thenReturn(completedFuture(FeaturedModBeanBuilder.create().defaultValues().get()));
 
     CompletableFuture<Void> future = instance.joinGame(game, null).toCompletableFuture();
@@ -241,7 +240,7 @@ public class GameServiceTest extends ServiceTest {
     mockStartGameProcess(gameLaunchMessage, false);
     when(mapService.isInstalled(anyString())).thenReturn(true);
     when(fafServerAccessor.requestJoinGame(anyInt(), isNull())).thenReturn(completedFuture(gameLaunchMessage));
-    when(gameUpdater.update(any(), any(), any(), any())).thenReturn(completedFuture(null));
+    when(gameUpdater.update(any(), any(), any())).thenReturn(completedFuture(null));
     when(modService.getFeaturedMod(anyString())).thenReturn(completedFuture(FeaturedModBeanBuilder.create().defaultValues().get()));
     when(process.isAlive()).thenReturn(true);
 
@@ -268,7 +267,7 @@ public class GameServiceTest extends ServiceTest {
     mockStartGameProcess(gameLaunchMessage, false);
     when(mapService.isInstalled(anyString())).thenReturn(true);
     when(fafServerAccessor.requestJoinGame(anyInt(), isNull())).thenReturn(completedFuture(gameLaunchMessage));
-    when(gameUpdater.update(any(), any(), any(), any())).thenReturn(completedFuture(null));
+    when(gameUpdater.update(any(), any(), any())).thenReturn(completedFuture(null));
     when(modService.getFeaturedMod(anyString())).thenReturn(completedFuture(FeaturedModBeanBuilder.create().defaultValues().get()));
     when(process.isAlive()).thenReturn(true);
 
@@ -298,7 +297,7 @@ public class GameServiceTest extends ServiceTest {
     mockStartGameProcess(gameLaunchMessage, false);
     when(mapService.isInstalled("map")).thenReturn(true);
     when(fafServerAccessor.requestJoinGame(game.getId(), null)).thenReturn(completedFuture(gameLaunchMessage));
-    when(gameUpdater.update(any(), any(), any(), any())).thenReturn(completedFuture(null));
+    when(gameUpdater.update(any(), any(), any())).thenReturn(completedFuture(null));
     when(modService.getFeaturedMod(game.getFeaturedMod())).thenReturn(completedFuture(FeaturedModBeanBuilder.create().defaultValues().get()));
 
     instance.joinGame(game, null).toCompletableFuture().get();
@@ -312,7 +311,7 @@ public class GameServiceTest extends ServiceTest {
     GameLaunchResponse gameLaunchMessage = GameLaunchMessageBuilder.create().defaultValues().get();
 
     mockStartGameProcess(gameLaunchMessage, false);
-    when(gameUpdater.update(any(), any(), any(), any())).thenReturn(completedFuture(null));
+    when(gameUpdater.update(any(), any(), any())).thenReturn(completedFuture(null));
     when(fafServerAccessor.requestHostGame(newGameInfo)).thenReturn(completedFuture(gameLaunchMessage));
     when(mapService.download(newGameInfo.getMap())).thenReturn(completedFuture(null));
 
@@ -515,7 +514,7 @@ public class GameServiceTest extends ServiceTest {
 
     mockStartGameProcess(gameLaunchMessage, false);
     when(fafServerAccessor.startSearchMatchmaker()).thenReturn(completedFuture(gameLaunchMessage));
-    when(gameUpdater.update(featuredMod, null, Collections.emptyMap(), Collections.emptySet())).thenReturn(completedFuture(null));
+    when(gameUpdater.update(featuredMod, null, Set.of())).thenReturn(completedFuture(null));
     when(mapService.isInstalled(map)).thenReturn(false);
     when(mapService.download(map)).thenReturn(completedFuture(null));
     when(modService.getFeaturedMod(FAF.getTechnicalName())).thenReturn(completedFuture(featuredMod));
@@ -547,7 +546,7 @@ public class GameServiceTest extends ServiceTest {
 
     mockStartGameProcess(gameLaunchMessage, false);
     when(fafServerAccessor.startSearchMatchmaker()).thenReturn(completedFuture(gameLaunchMessage));
-    when(gameUpdater.update(featuredMod, null, Collections.emptyMap(), Collections.emptySet())).thenReturn(completedFuture(null));
+    when(gameUpdater.update(featuredMod, null, Set.of())).thenReturn(completedFuture(null));
     when(mapService.isInstalled(map)).thenReturn(false);
     when(mapService.download(map)).thenReturn(completedFuture(null));
     when(modService.getFeaturedMod(FAF.getTechnicalName())).thenReturn(completedFuture(featuredMod));
@@ -567,7 +566,7 @@ public class GameServiceTest extends ServiceTest {
     GameLaunchResponse gameLaunchMessage = GameLaunchMessageBuilder.create().defaultValues().get();
 
     when(forgedAllianceService.startGameOnline(any(), eq(GPG_PORT), eq(LOCAL_REPLAY_PORT), eq(false))).thenReturn(process);
-    when(gameUpdater.update(any(), any(), any(), any())).thenReturn(completedFuture(null));
+    when(gameUpdater.update(any(), any(), any())).thenReturn(completedFuture(null));
     when(fafServerAccessor.requestHostGame(newGameInfo)).thenReturn(completedFuture(gameLaunchMessage));
     when(mapService.download(newGameInfo.getMap())).thenReturn(completedFuture(null));
 
@@ -603,7 +602,7 @@ public class GameServiceTest extends ServiceTest {
 
     mockStartGameProcess(gameLaunchMessage, true);
     when(modService.getFeaturedMod(game.getFeaturedMod())).thenReturn(completedFuture(FeaturedModBeanBuilder.create().defaultValues().get()));
-    when(gameUpdater.update(any(), any(), any(), any())).thenReturn(completedFuture(null));
+    when(gameUpdater.update(any(), any(), any())).thenReturn(completedFuture(null));
     when(fafServerAccessor.requestHostGame(any())).thenReturn(completedFuture(GameLaunchMessageBuilder.create().defaultValues().get()));
     when(modService.getFeaturedMod(game.getFeaturedMod())).thenReturn(completedFuture(FeaturedModBeanBuilder.create().defaultValues().get()));
     when(mapService.download(game.getMapFolderName())).thenReturn(completedFuture(null));
@@ -655,7 +654,7 @@ public class GameServiceTest extends ServiceTest {
     when(preferencesService.isGamePathValid()).thenReturn(true);
     NewGameInfo newGameInfo = NewGameInfoBuilder.create().defaultValues().get();
     GameLaunchResponse gameLaunchMessage = GameLaunchMessageBuilder.create().defaultValues().get();
-    when(gameUpdater.update(newGameInfo.getFeaturedMod(), null, Map.of(), newGameInfo.getSimMods())).thenReturn(completedFuture(null));
+    when(gameUpdater.update(newGameInfo.getFeaturedMod(), null, newGameInfo.getSimMods())).thenReturn(completedFuture(null));
     when(mapService.download(newGameInfo.getMap())).thenReturn(completedFuture(null));
     when(fafServerAccessor.requestHostGame(newGameInfo)).thenReturn(completedFuture(gameLaunchMessage));
     instance.hostGame(newGameInfo);
@@ -704,7 +703,7 @@ public class GameServiceTest extends ServiceTest {
     gameOptions.put("UnitCap", "500");
     GameLaunchResponse gameLaunchMessage = GameLaunchMessageBuilder.create().defaultValues().team(1).expectedPlayers(4).mapPosition(3).gameOptions(gameOptions).get();
     mockStartGameProcess(gameLaunchMessage, false);
-    when(gameUpdater.update(any(), any(), any(), any())).thenReturn(completedFuture(null));
+    when(gameUpdater.update(any(), any(), any())).thenReturn(completedFuture(null));
     when(mapService.download(gameLaunchMessage.getMapName())).thenReturn(completedFuture(null));
     when(fafServerAccessor.startSearchMatchmaker()).thenReturn(completedFuture(gameLaunchMessage));
     instance.startSearchMatchmaker().join();
@@ -724,7 +723,7 @@ public class GameServiceTest extends ServiceTest {
     gameOptions.put("UnitCap", "500");
     GameLaunchResponse gameLaunchMessage = GameLaunchMessageBuilder.create().defaultValues().team(1).expectedPlayers(4).mapPosition(3).gameOptions(gameOptions).get();
     mockStartGameProcess(gameLaunchMessage, false);
-    when(gameUpdater.update(any(), any(), any(), any())).thenReturn(completedFuture(null));
+    when(gameUpdater.update(any(), any(), any())).thenReturn(completedFuture(null));
     when(mapService.download(gameLaunchMessage.getMapName())).thenReturn(completedFuture(null));
     when(fafServerAccessor.startSearchMatchmaker()).thenReturn(CompletableFuture.completedFuture(gameLaunchMessage));
     CompletableFuture<Void> future = instance.startSearchMatchmaker();
@@ -745,7 +744,7 @@ public class GameServiceTest extends ServiceTest {
     gameOptions.put("UnitCap", "500");
     GameLaunchResponse gameLaunchMessage = GameLaunchMessageBuilder.create().defaultValues().team(1).expectedPlayers(4).mapPosition(3).gameOptions(gameOptions).get();
     mockStartGameProcess(gameLaunchMessage, false);
-    when(gameUpdater.update(any(), any(), any(), any())).thenReturn(completedFuture(null));
+    when(gameUpdater.update(any(), any(), any())).thenReturn(completedFuture(null));
     when(mapService.download(gameLaunchMessage.getMapName())).thenReturn(completedFuture(null));
     when(fafServerAccessor.startSearchMatchmaker()).thenReturn(CompletableFuture.completedFuture(gameLaunchMessage));
     instance.startSearchMatchmaker().cancel(false);
@@ -818,7 +817,7 @@ public class GameServiceTest extends ServiceTest {
     mockStartGameProcess(gameLaunchMessage, false);
     when(mapService.isInstalled("map")).thenReturn(true);
     when(fafServerAccessor.requestJoinGame(game.getId(), null)).thenReturn(completedFuture(gameLaunchMessage));
-    when(gameUpdater.update(any(), any(), any(), any())).thenReturn(completedFuture(null));
+    when(gameUpdater.update(any(), any(), any())).thenReturn(completedFuture(null));
     when(modService.getFeaturedMod(game.getFeaturedMod())).thenReturn(completedFuture(FeaturedModBeanBuilder.create().defaultValues().get()));
     when(replayService.start(anyInt(), any(Supplier.class))).thenReturn(completedFuture(new Throwable()));
 
